Did work on Post controller. Made Layout Changes.

--- a/BachelorModelViewController/Views/Shared/_Layout.cshtml
+++ b/BachelorModelViewController/Views/Shared/_Layout.cshtml
@@ -33,8 +33,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="post">POST</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Post" asp-action="Index">Post</a></li>
                 </ul>
             </div>
         </div>
