--- a/BachelorModelViewController/wwwroot/css/site.css
+++ b/BachelorModelViewController/wwwroot/css/site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #F3F3F3;
 }
 
 /* Wrapping element */
@@ -10,28 +11,12 @@
     padding-right: 15px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-    max-width: 280px;
+.row {
+    background-color: white;
 }
-
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
+.row.spacing {
+    margin-top: 25px;
 }
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
+.row.background {
+    background-color: #F3F3F3;
 }
