--- a/BachelorModelViewController/Views/Shared/_Layout.cshtml
+++ b/BachelorModelViewController/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - BachelorModelViewController</title>
+    <title>@ViewData["Title"] - Cupid</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -28,12 +28,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">BachelorModelViewController</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Cupid</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Post" asp-action="Index">Post</a></li>
+                    <li><a asp-area="" asp-controller="Channel" asp-action="Index">Channels</a></li>
+                    <li><a asp-area="" asp-controller="Group" asp-action="Index">Groups</a></li>
+                    <li><a asp-area="" asp-controller="Documentation" asp-action="Index">Documentation</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
