--- a/BachelorModelViewController/Views/Shared/_Layout.cshtml
+++ b/BachelorModelViewController/Views/Shared/_Layout.cshtml
@@ -28,14 +28,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Cupid</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><img class="logo" src="~/images/first_logo.png" /></a>
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse text-center">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Channel" asp-action="Index">Channels</a></li>
-                    <li><a asp-area="" asp-controller="Group" asp-action="Index">Groups</a></li>
-                    <li><a asp-area="" asp-controller="Documentation" asp-action="Index">Documentation</a></li>
+                    <li><a asp-area="" asp-controller="Channel" asp-action="Index"><span class="center-block glyphicon glyphicon-cloud"></span>Channels</a></li>
+                    <li><a asp-area="" asp-controller="Group" asp-action="Index"><span class="center-block glyphicon glyphicon-th"></span>Groups</a></li>
+                    <li><a asp-area="" asp-controller="Documentation" asp-action="Index"><span class="center-block glyphicon glyphicon-list-alt"></span>Documentation</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
