--- a/BachelorModelViewController/Views/Shared/_LoginPartial.cshtml
+++ b/BachelorModelViewController/Views/Shared/_LoginPartial.cshtml
@@ -7,12 +7,16 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right text-center">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Velkommen @UserManager.GetUserAsync(User).Result.FirstName</a>
+                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">
+                    <span class="center-block glyphicon glyphicon-cog"></span>Welcome @UserManager.GetUserAsync(User).Result.FirstName
+                </a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">
+                    <span class="center-block glyphicon glyphicon-lock"></span>Log out
+                </button>
             </li>
         </ul>
     </form>
@@ -20,7 +24,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Register"><span class="center-block glyphicon glyphicon-user"></span>Register</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Login"><span class="center-block glyphicon glyphicon-lock"></span>Log in</a></li>
     </ul>
 }
