--- a/BachelorModelViewController/Views/Group/Create.cshtml
+++ b/BachelorModelViewController/Views/Group/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Create</h2>
 
-<form asp-action="Create">
+<form asp-controller="Group" asp-action="Create">
     <div class="form-horizontal">
         <h4>Group</h4>
         <hr />
