minor group tests. Changing to group branch

--- a/BachelorModelViewController/Views/Group/MemberGroups.cshtml
+++ b/BachelorModelViewController/Views/Group/MemberGroups.cshtml
@@ -1,6 +1,6 @@
 @using BachelorModelViewController.Models
 
-@model IEnumerable<BachelorModelViewController.Models.Group>
+@model IEnumerable<Group>
 
 <p>
     <a asp-action="Create">Create New</a>
