Setting up rest of GroupController, you can now apply to a group. Sadly you cannot be approved yet.

--- a/BachelorModelViewController/Views/Group/MemberGroups.cshtml
+++ b/BachelorModelViewController/Views/Group/MemberGroups.cshtml
@@ -23,6 +23,14 @@
         @foreach (var item in Model) {
         <tr>
             <td>
+                @if (item.RoleId == null)
+                {
+                    <span class="glyphicon glyphicon-remove-circle"></span>
+                }
+                else
+                {
+                    <span class="glyphicon glyphicon-ok"></span>
+                }
                 @Html.DisplayFor(modelItem => item.GroupName)
             </td>
             <td class="pull-right">
