--- a/BachelorModelViewController/Views/Group/Delete.cshtml
+++ b/BachelorModelViewController/Views/Group/Delete.cshtml
@@ -1,4 +1,4 @@
-@model BachelorModelViewController.Models.ViewModels.GroupViewModels.GroupViewModel
+@model BachelorModelViewController.Models.ViewModels.GroupViewModels.DeleteViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,6 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>GroupViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <input type="hidden" asp-for="Id" />
@@ -17,6 +16,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Description)
         </dd>
     </dl>
     
