channel can't contain spaces.

--- a/BachelorModelViewController/Views/Channel/Create.cshtml
+++ b/BachelorModelViewController/Views/Channel/Create.cshtml
@@ -91,7 +91,7 @@
         <div class="form-group">
             <div class="col-md-2 control-label"><label>Define your data</label> <span class="glyphicon glyphicon-question-sign"></span></div>
             <div class="col-md-10 form-inline">
-                <span>Send a json string</span>
+                <span>Send an example of a json string</span>
                 <input type="radio" name="jsonContent" value="1" checked />
                 <span>Define the datatype from our site</span>
                 <input type="radio" name="jsonContent" value="2" />
