channel create keeps correct structure when model fails

--- a/BachelorModelViewController/Views/Channel/Create.cshtml
+++ b/BachelorModelViewController/Views/Channel/Create.cshtml
@@ -22,7 +22,7 @@
         }
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if (Model.AccessibleGroups != null && Model.Group == null)
+        @if (!Model.AsUser.Value && Model.Group == null)
         {
             <div class="form-group">
                 <label asp-for="Group" class="col-md-2 control-label"></label>
@@ -48,6 +48,9 @@
                 @Html.HiddenFor(m => m.UserId)
             </div>
         }
+        <div class="form-group">
+            @Html.HiddenFor(m => m.AsUser)
+        </div>
          <div class="form-group">
             <label asp-for="Name" class="col-md-2 control-label"></label>
             <div class="col-md-10">
