--- a/BachelorModelViewController/Views/Channel/AccessibleChannels.cshtml
+++ b/BachelorModelViewController/Views/Channel/AccessibleChannels.cshtml
@@ -27,7 +27,7 @@
                 <thead>
                     <tr>
                         <th>
-                            Name
+                            Group-restricted Channels
                         </th>
                         <th></th>
                     </tr>
@@ -37,7 +37,10 @@
                     {
                         <tr>
                             <td>
-                                item.Name
+                                @item.Name
+                            </td>
+                            <td>
+                                <a class="pull-right" asp-action="Details" asp-route-id="@item.Id">View</a>
                             </td>
                         </tr>
                     }
@@ -53,7 +56,7 @@
             <thead>
                 <tr>
                     <th>
-                        Name
+                        User-restricted Channels
                     </th>
                     <th></th>
                 </tr>
@@ -63,7 +66,10 @@
                 {
                     <tr>
                         <td>
-                            item.Name
+                            @item.Name
+                        </td>
+                        <td>
+                            <a  class="pull-right" asp-action="Details" asp-route-id="@item.Id">View</a>
                         </td>
                     </tr>
                 }
@@ -78,7 +84,7 @@
         <thead>
             <tr>
                 <th>
-                    Name
+                    Un-restricted Channels
                 </th>
                 <th></th>
             </tr>
@@ -88,7 +94,10 @@
                 {
                 <tr>
                     <td>
-                        item.Name
+                        @item.Name
+                    </td>
+                    <td>
+                        <a  class="pull-right" asp-action="Details" asp-route-id="@item.Id">View</a>
                     </td>
                 </tr>
                 }
