--- a/BachelorModelViewController/Views/Channel/Create.cshtml
+++ b/BachelorModelViewController/Views/Channel/Create.cshtml
@@ -91,36 +91,11 @@
                         "Standard restrictions")
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-md-2 control-label"><label>Define your data</label> <span class="glyphicon glyphicon-question-sign"></span></div>
-            <div class="col-md-10 form-inline">
-                <span>Send an example of a json string</span>
-                <input type="radio" name="jsonContent" value="1" checked />
-                <span>Define the datatype from our site</span>
-                <input type="radio" name="jsonContent" value="2" />
-            </div>
-        </div>
+        @Html.HiddenFor(x => x.JsonContentAsString)
         <div class="form-group json-upload">
-            <div class="col-md-offset-2 col-md-10">
-                <input asp-for="JsonContentAsString" class="form-control" />
-            </div>
-        </div>
-        <div class="form-group json-upload" style="display: none;">
-            <div class="col-md-offset-2 col-md-10 json-upload-fields">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <input class="form-control" />
-                            </div>
-                            <div class="col-sm-1 text-center">
-                                :
-                            </div>
-                            <div class="col-sm-3">
-                                <input class="form-control" />
-                            </div>
-                        </div>
-                    </div>
+            <div class="col-md-2 control-label"><label>Define your data</label> <span class="glyphicon glyphicon-question-sign"></span></div>
+            <div class="col-md-10">
+                <div id="json-input" class="json-upload">
                 </div>
             </div>
         </div>
@@ -146,17 +121,6 @@
                     $('.role-demanded').hide();
                 }
                 
-            }
-        };
-    }
-
-    var radio = document.channelCreate.jsonContent;
-    var prevRadio = null;
-    for (var i = 0; i < rad.length; i++) {
-        radio[i].onclick = function () {
-            if (this !== prev) {
-                prevRadio = this;
-                $('.json-upload').toggle();
             }
         };
     }
