--- a/BachelorModelViewController/Views/Channel/Create.cshtml
+++ b/BachelorModelViewController/Views/Channel/Create.cshtml
@@ -66,6 +66,13 @@
             </div>
         </div>
         <div class="form-group">
+            <label asp-for="DaysRestriction" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input type="number" min="0" asp-for="DaysRestriction" class="form-control" />
+                <span asp-validation-for="DaysRestriction" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-2 control-label"><label asp-for="AccessRestriction"></label> <span class="glyphicon glyphicon-question-sign"></span></div>
             <div class="col-md-10 form-inline">
                     <span>Not Authenticated</span>
